Add dynamic module loading

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,12 @@
           </footer>
 
         </section>
+        
+        <script>
+          window.components = {
+            'example': {}
+          };
+        </script>
 
         <script src="/bundle.js"></script>
 
